--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "@angular/cli": "^18.0.2",
     "@angular/compiler-cli": "^18.0.0",
     "@types/jasmine": "~5.1.0",
+    "@types/node": "^20.14.9",
     "angular-cli-ghpages": "^2.0.0",
     "jasmine-core": "~5.1.0",
     "karma": "~6.4.0",
